--- a/package.json
+++ b/package.json
@@ -2,10 +2,21 @@
   "name": "video-hosting",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
   "author": "",
   "license": "ISC",
+  "scripts": {
+    "start": "nodemon --exec babel-node init.js --delay 2"
+  },
   "dependencies": {
-    "express": "^4.17.1"
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.1",
+    "helmet": "^3.20.0",
+    "morgan": "^1.9.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/node": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "nodemon": "^1.19.1"
   }
 }
