--- a/package.json
+++ b/package.json
@@ -5,21 +5,33 @@
   "author": "",
   "license": "ISC",
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2"
+    "dev:server": "nodemon --exec babel-node init.js --delay 2",
+    "dev:assets": "webpack --mode=development -w",
+    "build:assets": "webpack"
   },
   "dependencies": {
+    "autoprefixer": "^9.6.1",
+    "babel-loader": "^8.0.6",
     "cookie-parser": "^1.4.4",
+    "css-loader": "^3.2.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^3.20.0",
     "mongoose": "^5.6.9",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
-    "pug": "^2.0.4"
+    "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
+    "pug": "^2.0.4",
+    "sass-loader": "^7.2.0",
+    "webpack": "^4.39.1",
+    "webpack-cli": "^3.3.6"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
     "@babel/node": "^7.5.5",
+    "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.5",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.2.0",
